--- a/InnoXCollab/InnoXCollab.Web/InnoXCollab.Web.csproj
+++ b/InnoXCollab/InnoXCollab.Web/InnoXCollab.Web.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Dto\" />
+  </ItemGroup>
+
 </Project>
