start of the new begining
new projects added, packages installed

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=innoxcollab.db"
+    "DefaultConnection": "Data Source=innoxcollab.db",
+    "SqlServerConnection": "Server=localhost;Database=InnoXCollabDb; Trusted_Connection=True; TrustServerCertificate=Yes"
   }
 }
