--- a/client-app/package.json
+++ b/client-app/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/lab": "^5.0.0-alpha.151",
     "@mui/material": "^5.14.16",
+    "@mui/x-data-grid": "^6.18.3",
     "@mui/x-date-pickers": "^6.17.0",
     "@types/uuid": "^9.0.6",
     "@types/yup": "^0.32.0",
