--- a/client-app/package.json
+++ b/client-app/package.json
@@ -18,22 +18,30 @@
     "@mui/material": "^5.14.16",
     "@mui/x-data-grid": "^6.18.3",
     "@mui/x-date-pickers": "^6.17.0",
+    "@types/draft-js": "^0.11.16",
+    "@types/react-draft-wysiwyg": "^1.13.7",
     "@types/uuid": "^9.0.6",
     "@types/yup": "^0.32.0",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "formik": "^2.4.5",
+    "html-to-draftjs": "^1.5.0",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/draftjs-to-html": "^0.8.4",
+    "@types/html-to-draftjs": "^1.4.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
