Event related photo, wysiwyg editor finally implemented
also some adjustments to event details (client side)

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cloudinary": {
+    "CloudName": "duormgto9",
+    "ApiKey": "727527482152581",
+    "ApiSecret": "hwZfhPa_DIEniiAVAZGQ7hmxPvc"
+  }
 }
